sep6/fmm_reduce_kernel/logs/hls_run_csim_24088.backup.log
  **** HLS Build v2025.1 6135595
INFO: [HLS 200-2005] Using work_dir C:/GEMM/sep6/fmm_reduce_kernel 
INFO: [HLS 200-2176] Writing Vitis IDE component file C:/GEMM/sep6/fmm_reduce_kernel/vitis-comp.json
INFO: [HLS 200-10] Creating and opening component 'C:/GEMM/sep6/fmm_reduce_kernel'.
INFO: [HLS 200-1505] Using default flow_target 'vivado'
Resolution: For help on HLS 200-1505 see docs.xilinx.com/access/sources/dita/topic?Doc_Version=2025.1%20English&url=ug1448-hls-guidance&resourceid=200-1505.html
INFO: [HLS 200-2174] Applying component config ini file C:/GEMM/sep6/hls_config.cfg
INFO: [HLS 200-1465] Applying config ini 'syn.file=fmm_hls_greedy_potential.cpp' from C:/GEMM/sep6/hls_config.cfg(8)
INFO: [HLS 200-10] Adding design file 'C:/GEMM/sep6/fmm_hls_greedy_potential.cpp' to the project
INFO: [HLS 200-1465] Applying config ini 'tb.file=tb_fmm_hls.cpp' from C:/GEMM/sep6/hls_config.cfg(9)
INFO: [HLS 200-10] Adding test bench file 'C:/GEMM/sep6/tb_fmm_hls.cpp' to the project
INFO: [HLS 200-1465] Applying config ini 'syn.top=fmm_reduce_kernel' from C:/GEMM/sep6/hls_config.cfg(7)
INFO: [HLS 200-1465] Applying config ini 'flow_target=vivado' from C:/GEMM/sep6/hls_config.cfg(4)
INFO: [HLS 200-1505] Using flow_target 'vivado'
Resolution: For help on HLS 200-1505 see docs.xilinx.com/access/sources/dita/topic?Doc_Version=2025.1%20English&url=ug1448-hls-guidance&resourceid=200-1505.html
INFO: [HLS 200-1465] Applying config ini 'part=xc7z020clg400-3' from C:/GEMM/sep6/hls_config.cfg(1)
INFO: [HLS 200-1611] Setting target device to 'xc7z020-clg400-3'
INFO: [HLS 200-1465] Applying config ini 'cosim.trace_level=none' from C:/GEMM/sep6/hls_config.cfg(11)
INFO: [HLS 200-1465] Applying config ini 'cosim.wave_debug=0' from C:/GEMM/sep6/hls_config.cfg(10)
INFO: [HLS 200-1465] Applying config ini 'package.ip.description=FMM row-reduction accelerator (greedy potential)' from C:/GEMM/sep6/hls_config.cfg(13)
INFO: [HLS 200-1465] Applying config ini 'package.ip.display_name=fmm_reduce_kernel' from C:/GEMM/sep6/hls_config.cfg(14)
INFO: [HLS 200-1465] Applying config ini 'package.ip.library=user' from C:/GEMM/sep6/hls_config.cfg(15)
INFO: [HLS 200-1465] Applying config ini 'package.ip.taxonomy=Math/LinearAlgebra' from C:/GEMM/sep6/hls_config.cfg(16)
INFO: [HLS 200-1465] Applying config ini 'package.ip.vendor=nilesh' from C:/GEMM/sep6/hls_config.cfg(17)
INFO: [HLS 200-1465] Applying config ini 'package.ip.version=1.0' from C:/GEMM/sep6/hls_config.cfg(18)
INFO: [HLS 200-1465] Applying config ini 'package.output.file=sep6_fmm_reduce_ip' from C:/GEMM/sep6/hls_config.cfg(12)
INFO: [HLS 200-1465] Applying config ini 'package.output.format=ip_catalog' from C:/GEMM/sep6/hls_config.cfg(5)
INFO: [HLS 200-1465] Applying config ini 'vivado.clock=100' from C:/GEMM/sep6/hls_config.cfg(19)
INFO: [HLS 200-2176] Writing Vitis IDE component file C:/GEMM/sep6/fmm_reduce_kernel/vitis-comp.json
INFO: [SIM 211-2] *************** CSIM start ***************
INFO: [SIM 211-4] CSIM will launch CLANG as the compiler.
INFO: [HLS 200-2036] Building debug C Simulation binaries
   Compiling ../../../../tb_fmm_hls.cpp in debug mode
csim.mk:88: recipe for target 'obj/tb_fmm_hls.o' failed
../../../../tb_fmm_hls.cpp:110:7: error: reference to non-static member function must be called
    M.set[row2, colt] = 0; // replaced below to match original semantics
    ~~^~~
../../../../tb_fmm_hls.cpp:110:11: warning: left operand of comma operator has no effect [-Wunused-value]
    M.set[row2, colt] = 0; // replaced below to match original semantics
          ^~~~
1 warning and 1 error generated.
make: *** [obj/tb_fmm_hls.o] Error 1
ERROR: [SIM 211-100] 'csim_design' failed: compilation error(s).
INFO: [SIM 211-3] *************** CSIM finish ***************
ERROR: 4
INFO: [HLS 200-112] Total CPU user time: 1 seconds. Total CPU system time: 1 seconds. Total elapsed time: 6.596 seconds; peak allocated memory: 156.324 MB.
